Fixing ViewProduct on small devices

--- a/src/Pages/FooterPages/FooterPages.css
+++ b/src/Pages/FooterPages/FooterPages.css
@@ -3,7 +3,6 @@
 }
 
 .text-container h1{
-    text-align: center;
     margin: 20px 0;
 }
 .text-container h3{
