--- a/src/Pages/RegistrationPages/Registration.css
+++ b/src/Pages/RegistrationPages/Registration.css
@@ -8,6 +8,7 @@
 .login-signup-form{
     background-color: var(--fifth-color);
     display: flex;
+    max-height: 45rem;
 }
 .login-signup-form img{
     width: 30vw;
@@ -150,7 +151,7 @@
         width: 40vw;
     }
   }
-  @media screen and (max-width: 670px){
+  @media screen and (max-width: 751px){
     .login-signup-form img{
         display: none;
     }
